fix: remove Analytics
