# be/openapi.json
@@ -2378,26 +2378,6 @@
                 }
             }
         },
-        "/api/v1/analytics": {
-            "get": {
-                "tags": [
-                    "analytics-controller"
-                ],
-                "operationId": "getAnalytics",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "*/*": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/AnalyticsResponse"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/api/v1/focus/notes/{noteId}": {
             "delete": {
                 "tags": [
@@ -4116,130 +4096,6 @@
                         "type": "boolean"
                     },
                     "freeLimit": {
-                        "type": "integer",
-                        "format": "int32"
-                    }
-                }
-            },
-            "AnalyticsResponse": {
-                "type": "object",
-                "properties": {
-                    "isPremium": {
-                        "type": "boolean"
-                    },
-                    "message": {
-                        "type": "string"
-                    },
-                    "weeklyProgress": {
-                        "$ref": "#/components/schemas/WeeklyProgressStats"
-                    },
-                    "energyFluctuations": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/EnergyFluctuation"
-                        }
-                    },
-                    "categoryAllocations": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/CategoryTimeAllocation"
-                        }
-                    },
-                    "habitStreaks": {
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/HabitStreakData"
-                        }
-                    }
-                }
-            },
-            "CategoryTimeAllocation": {
-                "type": "object",
-                "properties": {
-                    "categoryId": {
-                        "type": "string"
-                    },
-                    "categoryName": {
-                        "type": "string"
-                    },
-                    "color": {
-                        "type": "string",
-                        "example": "indigo"
-                    },
-                    "minutes": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "percentage": {
-                        "type": "integer",
-                        "format": "int32"
-                    }
-                }
-            },
-            "EnergyFluctuation": {
-                "type": "object",
-                "properties": {
-                    "date": {
-                        "type": "string"
-                    },
-                    "level": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "mood": {
-                        "type": "string"
-                    }
-                }
-            },
-            "HabitStreakData": {
-                "type": "object",
-                "properties": {
-                    "habitId": {
-                        "type": "string",
-                        "format": "uuid",
-                        "example": "3fa85f64-5717-4562-b3fc-2c963f66afa6"
-                    },
-                    "title": {
-                        "type": "string"
-                    },
-                    "color": {
-                        "type": "string",
-                        "example": "indigo"
-                    },
-                    "currentStreak": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "bestStreak": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "completionsThisWeek": {
-                        "type": "integer",
-                        "format": "int32"
-                    }
-                }
-            },
-            "WeeklyProgressStats": {
-                "type": "object",
-                "properties": {
-                    "totalTasks": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "completedTasks": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "completionRate": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "totalFocusMinutes": {
-                        "type": "integer",
-                        "format": "int32"
-                    },
-                    "averageEnergyLevel": {
                         "type": "integer",
                         "format": "int32"
                     }
